--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "next": "13.2.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^4.8.0",
     "react-router-dom": "^6.8.2",
     "react-timeline-component": "^0.0.3",
     "react-vertical-timeline-component": "^3.6.0",
