--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-router-dom": "^6.8.2",
     "react-timeline-component": "^0.0.3",
     "react-vertical-timeline-component": "^3.6.0",
+    "sharp": "^0.32.0",
     "typescript": "4.9.5"
   },
   "devDependencies": {
